# Hangman-Game

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  example.cpp
src/: function.h  main.cpp  modulars.cpp
